--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
     "prisma": "^5.1.1",
+    "prisma1": "^1.34.12",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
